--- a/index.html
+++ b/index.html
@@ -21,23 +21,24 @@
   
    <!--Navigation Bar--> 
    <section class="logo">
-       <a href="Heritance Kandalama.html"><img class="logo" src="./logo2.png" alt="Heritance Hotel Kandalama logo" width="100px"></a>
+       <a href="Heritance%20Kandalama.html"><img class="logo" src="./logo2.png" alt="Heritance Hotel Kandalama logo" width="100"></a>
    </section>
    
    <nav>
     <ul class="navlinks">
-        <li><a href="Heritance Kandalama.html">Home</a></li>
+        <li><a href="Heritance%20Kandalama.html">Home</a></li>
         <li><a href="Branches.html">Branches</a></li>
-        <li><a href="About us.html">About Us</a></li>
+        <li><a href="About%20us.html">About Us</a></li>
         <li><a href="Dining.html">Dining</a></li>
         <li><a href="Adventures.html">Adventures</a></li>
     </ul>
 </nav>
-<a class="book" a href="./booking.html" ><button>Book Now!</button></a>
+<a class="book" href="./booking.html" ><button>Book Now!</button></a>
     <section class="menubtn">
         <input type="checkbox" role="button" aria-label="Display the menu" class="menu">
     </section>
     <section class="dropdown_menu">
+      <ul>
         <li><a href="Heritance Kandalama.html">Home</a></li>
         <li><a href="Branches.html">Branches</a></li>
         <li><a href="About us.html">About Us</a></li>
@@ -46,6 +47,7 @@
         <li><a href="events.html">Events</a></li>
         <li><a href="Adventures.html">Adventures</a></li>
         <li><a class="book" a href="./booking.html" ><button>Book Now!</button></a></li>
+      </ul>
     </section>
        <script>
            const menu_btn = document.querySelector('.menubtn')
