--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
         <li><a href="Adventures.html">Adventures</a></li>
     </ul>
 </nav>
-<a class="book" href="./booking.html" ><button>Book Now!</button></a>
+<a class="book" href="./booking.html" >Book Now</a>
+    <button>Book Now!</button>
     <section class="menubtn">
-        <input type="checkbox" role="button" aria-label="Display the menu" class="menu">
+        <input type="checkbox" role="button" aria-pressed="true" aria-label="Display the menu" class="menu">
+
     </section>
     <section class="dropdown_menu">
       <ul>
-        <li><a href="Heritance Kandalama.html">Home</a></li>
+        <li><a href="Heritance%20Kandalama.html">Home</a></li>
         <li><a href="Branches.html">Branches</a></li>
-        <li><a href="About us.html">About Us</a></li>
+        <li><a href="About%20us.html">About Us</a></li>
         <li><a href="Dining.html">Dining</a></li>
         <li><a href="Gallery.html">Gallery</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="Adventures.html">Adventures</a></li>
-        <li><a class="book" a href="./booking.html" ><button>Book Now!</button></a></li>
+        <li><a class="book" a href="./booking.html" >Book Now</a>
+            <button>Book Now!</button></li>
       </ul>
     </section>
        <script>
