--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li><a href="Adventures.html">Adventures</a></li>
     </ul>
 </nav>
-<a class="book" href="./booking.html" >Book Now</a>
+<a class="book" href="./booking.html" ></a>
     <button>Book Now!</button>
     <section class="menubtn">
         <input type="checkbox" role="button" aria-pressed="true" aria-label="Display the menu" class="menu">
@@ -48,7 +48,7 @@
         <li><a href="Gallery.html">Gallery</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="Adventures.html">Adventures</a></li>
-        <li><a class="book" a href="./booking.html" >Book Now</a>
+        <li><a class="book" a href="./booking.html" ></a>
             <button>Book Now!</button></li>
       </ul>
     </section>
